Fix padding inconsistencies in index.html
...But added some extra padding changes that I
think are unnecessary in order to make the website
design as close to TOP's screenshot as possible.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
 }
 
 body > * {
+    padding: 100px 250px;
+}
+
+.header, .footer {
     padding: 0px 250px;
 }
 
@@ -23,9 +27,12 @@ a {
     color: white;
 }
 
+p {
+    margin: 0;
+}
+
 .header, .overview-section {
     background-color: #1f2937;
-    padding-bottom: 100px;
     display: flex;
     justify-content: space-between;
 }
@@ -51,12 +58,9 @@ a {
 }
 
 .overview-section {
-    gap: 20px;
+    gap: 30px;
 }
 
-.overview-section p {
-    margin: 10px 0;
-}
 
 .overview-title {
     font-size: 48px;
@@ -65,7 +69,7 @@ a {
 }
 
 .overview-image {
-    flex: 1;
+    flex: 1 0 auto;
     /* width: 500px; */
     /* height: 100px; */
     border: 3px solid white;
@@ -73,6 +77,10 @@ a {
 
 .overview-left {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
 }
 
 .overview-button, .action-button {
@@ -87,9 +95,11 @@ a {
 
 .detailed-section {
     display: flex;
+    padding-top: 40px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 50px;
 }
 
 .detailed-header {
@@ -100,17 +110,18 @@ a {
 
 .detailed-card-list {
     display: flex;
-    gap: 20px;
+    gap: 40px;
     flex-wrap: wrap;
 }
 
 .detailed-card {
     flex: 1;
+    max-width: 200px;
 }
 
 .detailed-card-image {
-    width: 200px;
-    height: auto;
+    max-width: inherit;
+    max-height: auto;
     display: block;
     margin: 0 auto;
     border: 5px solid #3882f6;
@@ -119,6 +130,7 @@ a {
 
 .detailed-card-subtext  {
     text-align: center;
+    margin-top: 10px;
 }
 
 .testimony-section {
@@ -139,13 +151,6 @@ a {
     font-size: 20px;
 }
 
-.action-section {
-    /* display: flex;
-    align-items: center; */
-    padding: 100px 250px;
-    /* might be able to refactor this */
-}
-
 .action-banner {
     flex: 1;
     background-color: #3882f6;
@@ -158,11 +163,7 @@ a {
     color: white;
 }
 
-.action-banner p {
-    margin: 0;
-}
-
-p.action-title {
+.action-title {
     font-size: 23px;
     font-weight: bold;
     margin-bottom: 3px;
